--- a/.github/workflows/starter-workflow-python-package.yml
+++ b/.github/workflows/starter-workflow-python-package.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.5.10", "3.6.15", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -24,6 +24,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: "x64"
+      env: AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
