--- a/.github/workflows/example-selfhosted.yml
+++ b/.github/workflows/example-selfhosted.yml
@@ -9,5 +9,5 @@ jobs:
       - name: 'I am alive'
         run: echo 'Selfhosted script started successfully'
       - name: 'Just grep'
-        run: grep "hqr"  C:\Users\jakub\Desktop\Robocze\GA\KursGithubActions\.github\workflows\actionsDemo\file.txt
+        run: findstr "hqr"  C:\Users\jakub\Desktop\Robocze\GA\KursGithubActions\.github\workflows\actionsDemo\file.txt
  
