--- a/.github/workflows/example_cicd.yml
+++ b/.github/workflows/example_cicd.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   Build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -20,9 +20,40 @@ jobs:
   DeployDev:
     name: Deploy to Dev
     needs: [Build]
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    environment:
+      name: Development
+      url: ${{ steps.deploystep.outputs.deployment-url }}
     steps:
-      - uses: jakubk3697/ExampleCompositeAction@main
+      - uses: hqrEdu/ExampleCompositeAction@main
         id: deploystep
         with:
           deploy-name: dev
+
+  DeployStaging:
+    name: Deploy to Staging 
+    needs: [Build]
+    runs-on: ubuntu-latest
+    if: github.event.ref == 'refs/heads/main'
+    environment: 
+      name: Staging
+      url: ${{ steps.deploystep.outputs.deployment-url }}
+    steps:
+      - uses: hqrEdu/ExampleCompositeAction@main
+        id: deploystep
+        with:
+          deploy-name: staging
+
+  DeployProd:
+    name: Deploy to Production
+    needs: [DeployStaging]
+    runs-on: ubuntu-latest
+    environment: 
+      name: Production
+      url: ${{ steps.deploystep.outputs.deployment-url }}
+    steps:
+      - uses: hqrEdu/ExampleCompositeAction@main
+        id: deploystep
+        with:
+          deploy-name: prod
